# gazelle:prefix k8s.io/kops
# gazelle:proto disable_global

load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:proto disable_global
gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
)

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "version.go",
    ],
    importpath = "k8s.io/kops",
)

load("@io_k8s_repo_infra//defs:run_in_workspace.bzl", "workspace_binary")

workspace_binary(
    name = "gofmt",
    cmd = "@go_sdk//:bin/gofmt",
)


load("//tools:create_dir.bzl", "create_dir")

create_dir(
    name = "output-dir",
    files = {
      "//dns-controller/cmd/dns-controller:image-bundle.tar.gz": "the-gz",
      "//dns-controller/cmd/dns-controller:image-bundle.tar.gz.sha1": "the-sha1",
      "//dns-controller/cmd/dns-controller:image-bundle.tar.gz.sha256": "the-sha256",
   },
)
