load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["actuators.go"],
    importpath = "k8s.io/kops/machine-controller/pkg/actuators",
    visibility = ["//visibility:public"],
    deps = [
        "//machine-controller/pkg/actuators/baremetal:go_default_library",
        "//pkg/client/simple:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api-gcp/cloud:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api/client:go_default_library",
    ],
)
