load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["configuration.go"],
    importpath = "k8s.io/kops/machine-controller/pkg/config",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/spf13/pflag:go_default_library"],
)
