load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "asyncrunner.go",
        "client.go",
        "configuration.go",
        "machinecontroller.go",
        "nodewatcher.go",
    ],
    importpath = "k8s.io/kops/machine-controller/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//machine-controller/pkg/actuators:go_default_library",
        "//machine-controller/pkg/util:go_default_library",
        "//pkg/client/simple:go_default_library",
        "//pkg/client/simple/vfsclientset:go_default_library",
        "//util/pkg/vfs:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/fields:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api-gcp/cloud:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api/api/cluster/v1alpha1:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api/client:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api/util:go_default_library",
    ],
)
