load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "load.go",
        "types.go",
    ],
    importpath = "k8s.io/kops/pkg/addon/channel",
    visibility = ["//visibility:public"],
    deps = [
        "//upup/pkg/fi/utils:go_default_library",
        "//util/pkg/vfs:go_default_library",
        "//vendor/github.com/blang/semver:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)
