load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["builder.go"],
    importpath = "k8s.io/kops/pkg/addon/wellknown",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addon:go_default_library",
        "//pkg/apis/kops:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)
