load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bundlebuilder.go",
        "context.go",
    ],
    importpath = "k8s.io/kops/pkg/model/baremetalmodel",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//upup/pkg/fi/fitasks:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)
