load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "actuator.go",
        "errors.go",
        "instancestatus.go",
        "iso.go",
        "ova.go",
        "vm.go",
        "vspherecontext.go",
    ],
    importpath = "k8s.io/kops/machine-controller/pkg/actuators/vsphere",
    visibility = ["//visibility:public"],
    deps = [
        "//machine-controller/pkg/config:go_default_library",
        "//machine-controller/pkg/kopsproviderconfig:go_default_library",
        "//machine-controller/pkg/kopsproviderconfig/v1alpha1:go_default_library",
        "//machine-controller/pkg/util:go_default_library",
        "//pkg/apis/kops:go_default_library",
        "//pkg/bundle:go_default_library",
        "//pkg/client/simple:go_default_library",
        "//upup/pkg/fi/cloudup/vsphere:go_default_library",
        "//upup/pkg/kutil:go_default_library",
        "//util/pkg/vfs:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/vmware/govmomi/find:go_default_library",
        "//vendor/github.com/vmware/govmomi/object:go_default_library",
        "//vendor/github.com/vmware/govmomi/ovf:go_default_library",
        "//vendor/github.com/vmware/govmomi/vim25:go_default_library",
        "//vendor/github.com/vmware/govmomi/vim25/soap:go_default_library",
        "//vendor/github.com/vmware/govmomi/vim25/types:go_default_library",
        "//vendor/golang.org/x/crypto/ssh:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer/json:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api-gcp/cloud:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api-gcp/errors:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api/api/cluster/v1alpha1:go_default_library",
        "//vendor/k8s.io/kube-deploy/cluster-api/client:go_default_library",
    ],
)
